Added locations views
