# backend/docs/openapi.yaml
@@ -11,6 +11,8 @@ tags:
     description: "api auth"
   - name: users
     description: "api users"
+  - name: locations
+    description: "api locations"
   - name: children
     description: "api children"
   - name: events
@@ -99,6 +101,26 @@ paths:
           $ref: '#/components/responses/Unauthorized'
 
   '/users/children/{child_id}/':
+    put:
+      tags:
+        - children
+      summary: "Update child"
+      parameters:
+        - name: child_id
+          in: path
+          schema:
+            type: number
+          required: true
+      security:
+        - bearerAuth: [ ]
+      requestBody:
+        $ref: '#/components/requestBodies/ChildCreate'
+      responses:
+        '200':
+          $ref: '#/components/responses/ChildCreate200'
+        '404':
+          $ref: '#/components/responses/NotFound'
+
     delete:
       tags:
         - children
@@ -116,6 +138,81 @@ paths:
           description: 'Success delete'
         '404':
           $ref: '#/components/responses/NotFound'
+
+
+  '/locations/':
+    get:
+      tags:
+        - locations
+      summary: "Get locations"
+      security:
+        - bearerAuth: [ ]
+      responses:
+        '200':
+          $ref: '#/components/responses/LocationList200'
+        '401':
+          $ref: '#/components/responses/Unauthorized'
+
+    post:
+      tags:
+        - locations
+      summary: "Create location"
+      security:
+        - bearerAuth: [ ]
+      requestBody:
+        $ref: '#/components/requestBodies/CreateLocation'
+      responses:
+        '201':
+          $ref: '#/components/responses/LocationCreate201'
+        '400':
+          $ref: '#/components/responses/LocationCreate400'
+        '401':
+          $ref: '#/components/responses/Unauthorized'
+
+  '/locations/{location_id}':
+    put:
+      tags:
+        - locations
+      summary: "Update location"
+      parameters:
+        - name: location_id
+          in: path
+          schema:
+            type: number
+          required: true
+      security:
+        - bearerAuth: [ ]
+      requestBody:
+        $ref: '#/components/requestBodies/CreateLocation'
+      responses:
+        '200':
+          $ref: '#/components/responses/LocationCreate201'
+        '400':
+          $ref: '#/components/responses/LocationCreate400'
+        '401':
+          $ref: '#/components/responses/Unauthorized'
+
+    patch:
+      tags:
+        - locations
+      summary: "Partial update location"
+      security:
+        - bearerAuth: [ ]
+      parameters:
+        - name: location_id
+          in: path
+          schema:
+            type: number
+          required: true
+      requestBody:
+        $ref: '#/components/requestBodies/CreateLocation'
+      responses:
+        '200':
+          $ref: '#/components/responses/LocationCreate201'
+        '400':
+          $ref: '#/components/responses/LocationCreate400'
+        '401':
+          $ref: '#/components/responses/Unauthorized'
 
   '/events/':
     get:
@@ -393,6 +490,19 @@ components:
                     type: string
                     format: date
 
+    CreateLocation:
+      content:
+        application/json:
+          schema:
+            type: object
+            properties:
+              address:
+                type: string
+              latitude:
+                type: number
+              longitude:
+                type: number
+
   responses:
     Unauthorized:
       description: "Unauthorized"
@@ -530,6 +640,15 @@ components:
             items:
               $ref: '#/components/schemas/EventRetrieve'
 
+    LocationList200:
+      description: "Success"
+      content:
+        application/json:
+          schema:
+            type: array
+            items:
+              $ref: '#/components/schemas/LocationRetrieve'
+
     EventList400:
       description: "Bad Request"
       content:
@@ -658,3 +777,33 @@ components:
                 items:
                   type: string
                   example: "У пользователя нет такого адреса"
+
+    LocationCreate201:
+      description: "Created"
+      content:
+        application/json:
+          schema:
+            $ref: '#/components/schemas/LocationRetrieve'
+
+    LocationCreate400:
+      description: "Bad Request"
+      content:
+        application/json:
+          schema:
+            type: object
+            properties:
+              address:
+                type: array
+                items:
+                  type: string
+                  example: "Убедитесь, что это значение содержит не более 55 символов."
+              latitude:
+                type: array
+                items:
+                  type: string
+                  example: "Убедитесь, что это значение больше либо равно -90."
+              longitude:
+                type: array
+                items:
+                  type: string
+                  example:  "Убедитесь, что это значение меньше либо равно 180."
