# backend/server/apps/events/routers.py
@@ -1,6 +1,6 @@
 from rest_framework.routers import DefaultRouter
 
-from .viewsets import EventViewSet
+from .viewsets import EventViewSet, LocationViewSet
 
 events_router = DefaultRouter()
 
@@ -8,4 +8,9 @@ events_router.register(
     prefix='events',
     viewset=EventViewSet,
     basename='events',
+)
+events_router.register(
+    prefix='locations',
+    viewset=LocationViewSet,
+    basename='locations',
 )
